infra/k8s/orders-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: xteleon/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
