infra/k8s/ticket-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
        - name: ticket
          image: xteleon/ticket
          volumeMounts:
            - mountPath: /app/common
              name: common
      volumes:
        - name: common
          hostPath:
            path: /run/desktop/mnt/host/d/Prathik/ticket_shop/common
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: ticket-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: ticket
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
